fix namespacing in docs

--- a/page/_css/franklin.css
+++ b/page/_css/franklin.css
@@ -141,7 +141,7 @@ html {
         margin: 10px 0; }
 
 .franklin-content a {
-    color: #004de6;
+    color: #008080;
     text-decoration: none; }
 
 .franklin-content a:hover {
